--- a/package.json
+++ b/package.json
@@ -14,12 +14,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "chalk": "^5.4.1",
+    "chalk": "^5.6.0",
     "concat-stream": "^2.0.0",
     "esm": "^3.2.25",
-    "figlet": "^1.8.1",
-    "fs-extra": "^11.3.0",
-    "jest": "^29.7.0",
+    "figlet": "^1.8.2",
+    "fs-extra": "^11.3.1",
+    "jest": "^30.0.5",
     "readline": "^1.3.0",
     "shelljs": "^0.10.0"
   },
@@ -27,12 +27,12 @@
     "adventure": "./bin/adventure.js"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.4",
-    "@babel/preset-env": "^7.27.2",
-    "babel-jest": "^30.0.0-beta.3",
+    "@babel/core": "^7.28.3",
+    "@babel/preset-env": "^7.28.3",
+    "babel-jest": "^30.0.5",
     "babel-plugin-transform-import-meta": "^2.3.3",
-    "eslint": "^9.28.0",
-    "eslint-plugin-import": "^2.31.0"
+    "eslint": "^9.34.0",
+    "eslint-plugin-import": "^2.32.0"
   },
   "browserslist": [
     ">0.2%",
